<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Standard SF App</string>

    <string name="splash_standard">Standard</string>
    <string name="de_liege">de Liège</string>
    <string name="section">SL16 Football Campus</string>
    <string name="imageDescription">Team logo</string>
    <string name="lockerDescription">it\'s a locker</string>
    <string name="loading_error">Data loading error</string>
    <string name="team_name_format">Équipe %s</string>
    <string name="team_a_menu_label">Équipe A</string>
    <string name="team_b_menu_label">Équipe B</string>
    <string name="team_c_menu_label">Équipe C</string>
    <string name="team_u16_menu_label">Équipe U16</string>
    <string name="team_u14_menu_label">Équipe U14</string>
    <string name="team_u13_menu_label">Équipe U13</string>
    <string name="team_u12_menu_label">Équipe U12</string>
    <string name="team_u11_menu_label">Équipe U11</string>
    <string name="pref_team_title">Équipe(s) préférée(s)</string>
    <string name="pref_info_title">Information</string>
    <string name="network_error">Pas de réseau</string>
    <string name="retryDialog">Réessayer</string>
    <string name="cancelDialog">Continuer</string>
    <string name="db_error_title">Erreur Base de données</string>
    <string name="db_error_msg">Erreur lors du chargement de la base de donnée</string>
    <string name="network_error_title">Problème réseau</string>
    <string name="networ_error_msg">Activer le Wifi ou les données mobiles</string>
    <string name="day_name_format">J %d</string>
    <string name="score_separator">−</string>
    <string name="home_fragment_title">Live Score</string>
    <string name="live">Live</string>
    <string name="botomNavSelectLabel">Sélection</string>
    <string name="bottomNavEventLabel">Évènements</string>
    <string name="bottomNavConfigLabel">Config</string>
    <string name="MatchMngSearchLabel">Ajouter</string>
    <string name="selectionLabel">Sélection</string>
    <string name="cap_keep_label">🅖／🅲</string>
    <string name="mm_score_label">Score</string>
    <string name="mm_periode_label">Période</string>
    <string name="em_miss_button_label"> Manqué </string>
    <string name="em_success_button_label">Réussi</string>
    <string name="em_possess_label">Possession</string>
    <string name="em_goal">Goal</string>
    <string name="em_foul">Faute</string>
    <string name="em_offside">hors-jeux</string>
    <string name="em_corner">corner</string>
    <string name="em_center_shoot">tir cadré</string>
    <string name="em_out_shoot">tir non cadré</string>
    <string name="em_change">changement</string>
    <string name="em_card">carte</string>
    <string name="mm_search_player">Entrez le nom de la joueuse</string>
    <string name="match_data_label">Données du match</string>
    <string name="mc_period_label">Périodes</string>
    <string name="mcdirect_fired_label">Elimination direct</string>
    <string name="mc_prolongation_label">Prologation</string>
    <string name="mc_nb_player_label">Nombre de joueuses</string>
    <string name="mc_nb_change_label">Changements (0 = volant)</string>
    <string name="mc_personal_alert_label">Alertes Personnelles</string>
    <string name="mc_new_activity_label">Nouvelle alerte</string>
    <string name="mc_time_format_label">(min:sec)</string>
    <string name="mc_gold_alert_label">Alertes</string>
    <string name="mc_alert_mode_label">Mode</string>
    <string name="live_menu_item_label">Préférences</string>
    <string name="mm_lock_menu_item">lock</string>

    <string-array name="match_tab_txt">
        <item>Sélection</item>
        <item>Évènements</item>
        <item>Config</item>
    </string-array>

</resources>
