<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab_nav_graph"
    app:startDestination="@id/matchManagerFragment">
    <fragment
        android:id="@+id/matchManagerFragment"
        android:name="be.technifutur.devmob9.sdsftryone.fragment.MatchManagerFragment"
        android:label="@string/botomNavSelectLabel"
        tools:layout="@layout/fragment_match_manager" />
    <fragment
        android:id="@+id/matchEventFragment"
        android:name="be.technifutur.devmob9.sdsftryone.fragment.MatchEventFragment"
        android:label="@string/bottomNavEventLabel"
        tools:layout="@layout/fragment_match_event" />
    <fragment
        android:id="@+id/matchConfigFragment"
        android:name="be.technifutur.devmob9.sdsftryone.fragment.MatchConfigFragment"
        android:label="@string/bottomNavConfigLabel"
        tools:layout="@layout/fragment_match_config" />
</navigation>