<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MatchManagerFragment">

    <TextView
        android:id="@+id/searchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:padding="4dp"
        android:text="@string/MatchMngSearchLabel"
        android:textColor="@color/anthracite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/searchPlayerSearchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchPlayerSearchView"
        />

    <AutoCompleteTextView
        android:id="@id/searchPlayerSearchView"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:background="@drawable/light_gray_rounded_corner"
        android:layout_marginTop="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:hint="@string/mm_search_player"
        app:layout_constraintEnd_toStartOf="@+id/mmAddPlayerButton"
        app:layout_constraintStart_toEndOf="@+id/searchLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/mmAddPlayerButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:src="@drawable/add_circle_outline_24px"
        app:layout_constraintBottom_toBottomOf="@id/searchPlayerSearchView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchPlayerSearchView"
        app:layout_constraintTop_toTopOf="@id/searchPlayerSearchView" />

    <View
        android:id="@+id/goldView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/plain_gold_background"
        app:layout_constraintTop_toTopOf="@+id/selectionTextLabel"
        app:layout_constraintBottom_toBottomOf="@id/selectionTextLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/selectionTextLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:padding="4dp"
        android:text="@string/selectionLabel"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchPlayerSearchView" />

    <TextView
        android:id="@+id/nbPlayersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="11"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/selectionTextLabel"
        app:layout_constraintTop_toTopOf="@+id/selectionTextLabel"
        app:layout_constraintEnd_toStartOf="@+id/mmCapKeepTextView" />

    <TextView
        android:id="@+id/mmCapKeepTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/cap_keep_label"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_marginEnd="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/selectionTextLabel"
        app:layout_constraintTop_toTopOf="@id/selectionTextLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selectedPlayerRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goldView" />

</androidx.constraintlayout.widget.ConstraintLayout>