<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_red"
    android:fitsSystemWindows="true"
    tools:context=".fragment.SplashFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:contentDescription="@null"
            android:src="@drawable/logo_standard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/standardTopSpace"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/imageView" />

        <TextView
            android:id="@+id/standardTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingTop="-14dp"
            android:fontFamily="@font/news_cycle_bold"
            android:text="@string/splash_standard"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/standardTopSpace" />

        <Space
            android:id="@+id/deLiegeTopSpace"
            android:layout_marginBottom="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/standardTextView" />

        <TextView
            android:id="@+id/deLiegeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/news_cycle_bold"
            android:text="@string/de_liege"
            android:textAllCaps="true"
            android:textColor="@color/gold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deLiegeTopSpace" />

        <TextView
            android:id="@+id/sectionTextView"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/news_cycle_bold"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/section"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deLiegeTextView" />


        <FrameLayout
            android:id="@+id/animMaskLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="@id/sectionTextView"
            android:background="@color/dark_red" />

        <FrameLayout
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:background="@drawable/splash_lines"
            app:layout_constraintTop_toTopOf="@+id/sectionTextView"
            app:layout_constraintBottom_toBottomOf="@+id/sectionTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >


        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:backgroundTintMode="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>